<resources>
    <string name="app_name">Intotra</string>
    <string name="i_n_t_o_t_r_a">I N T O T R A</string>
    <string name="sliding_name">sliding using tabs</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="tab_4">Tab 4</string>
    <string name="source">SOURCE :</string>
    <string name="destination">DESTINATION :</string>
    <string name="find_my_place">Find My Place</string>
    <string name="choose_a_place">Choose A Place</string>
    <string name="nxt">Next</string>
    <string-array name="places">
            <item>ooty</item>
            <item>kodaikanal</item>
            <item>thirupati</item>
            <item>maldives</item>
            <item>ajanta caves</item>
            <item>ladakh range</item>
            <item>velangani</item>
            <item>decca mekka</item>
            <item>goa</item>
            <item>pondicherry</item>
    </string-array>


</resources>
