<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.intotra.Tab1">


    <!--    <SearchView-->
<!--        android:id="@+id/searchView2"-->
<!--        android:layout_width="240dp"-->
<!--        android:layout_height="47dp"-->
<!--        android:layout_marginStart="14dp"-->
<!--        android:layout_marginLeft="14dp"-->
<!--        android:layout_marginTop="134dp"-->
<!--        android:layout_marginEnd="50dp"-->
<!--        android:layout_marginRight="50dp"-->
<!--        android:layout_marginBottom="54dp"-->
<!--        android:background="@color/light_blue"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/destination"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/source"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="50dp"
        android:shadowColor="#00474444"
        android:text="@string/source"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textColorHighlight="#00030303"
        android:textColorLink="#000F0F0F"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/destination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="101dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/source"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linearlayout">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </Spinner>
    </LinearLayout>

    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="256dp"
        android:text="@string/destination"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="239dp"
        tools:visibility="visible" />

<!--    -->
    <SearchView
        android:id="@+id/searchView3"
        android:layout_width="223dp"
        android:layout_height="37dp"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/light_blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button"
        android:layout_width="96dp"
        android:layout_height="44dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="205dp"
        android:layout_marginRight="205dp"
        android:layout_marginBottom="243dp"
        android:drawableEnd="@drawable/ic_keyboard_arrow"
        android:text="@string/nxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView3"
        tools:ignore="MissingConstraints"
        android:drawableRight="@drawable/ic_keyboard_arrow" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="183dp"
        android:layout_height="62dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/searchView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_my_place"
            android:textStyle="bold"
            android:checked="false"
            android:onClick="radio1"
            tools:ignore="OnClick" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_place"
            android:textStyle="bold"
            android:checked="false"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>





